--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@
 
 #taskbar .dropdown{
 	float: left;
+	width: 8%;
+}
+
+#taskbar .dropdown button{
+	width: 90%;
 }
 
 #xyInput{
@@ -69,11 +74,11 @@
 #alert_dialog{
 	position: absolute;
 	width: 25%;
-	top: 50%;
+	top: 35%;
 	left: 35%;
 }
 
 #alert_dialog button{
-	width: 30%;
-	margin: 10% 10%;
+	width: 20%;
+	margin: 5% 6.5%;
 }
