--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,15 @@
 	width: 20%;
 	margin: 5% 6.5%;
 }
+
+#auto_shape{
+	position: absolute;
+	width: 25%;
+	top: 35%;
+	left: 35%;
+}
+
+#auto_shape button{
+	width: 30%;
+	margin: 5% 10%;
+}
